--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.545.0",
     "mysql2": "^3.15.0",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
@@ -22,7 +24,7 @@
     "react-dom": "19.1.0",
     "sequelize": "^6.37.7",
     "styled-components": "^6.1.19",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -37,6 +39,7 @@
     "eslint-config-next": "15.5.3",
     "sequelize-cli": "^6.6.3",
     "tailwindcss": "^4.1.14",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
