--- a/package.json
+++ b/package.json
@@ -10,19 +10,25 @@
     "lint:fix": "eslint --fix"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.545.0",
-    "mysql2": "^3.15.0",
+    "mysql2": "^3.15.2",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sequelize": "^6.37.7",
+    "sonner": "^2.0.7",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1"
   },
